# HAC

./: INSTRUCTIONS.md  README.md
CUDAEindoefening/src/: .CUDAEindoefening.cu.swo  .CUDAEindoefening.cu.swp  .CUDAEindoefening.swp  CUDAEindoefening  CUDAEindoefening.cu  profielresultaten.txt
Cuda/: Cuda.ipynb  README.md
Cuda/CUDAEindoefening/src/: .CUDAEindoefening.cu.swn  CUDAEindoefening  CUDAEindoefening.cu  profielresultaten.txt  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  report3.nsys-rep
Cuda/EindOefening/: main.c  result_profiling.md
Cuda/EindOefening/PictureResult/: profile.md
Cuda/EindOefeninginC/: main.c  result_profiling.md
EindOefening/: main.c  profile.md
EindOefening/PictureResult/: profile.md
HLS/: HLS.ipynb  README.md
HLS/ConvolutionHLS/: main.py
HLS/HLSEindoefening/: .project  .vitis_hls_log_all.xml  hls.app  hls_process_images.c  hls_process_images_tb.c
HLS/HLSEindoefening/.apc/: autopilot.apfmapping
HLS/HLSEindoefening/Debug/: makefile
HLS/HLSEindoefening/solution1/: directives.tcl
HLS/HLSEindoefening/solution1/.autopilot/db/driver/src/: CMakeLists.txt  Makefile
HLS/HLS_Image_Proc/: Adress.txt
HLSEindoefening/: .cproject  .vitis_hls_log_all.xml  hls_process_images.c  hls_process_images.h
HLSEindoefening/.apc/: autopilot.apfmapping
HLSEindoefening/solution1/: script.tcl  solution1.aps  solution1.directive  solution1_data.json
TestHLS/HLSEindoefening/: .cproject  .project  .vitis_hls_log_all.xml  hls.app  hls_process_images.cpp  hls_process_images.hpp  hls_process_images_tb.cpp
(+2551 files in other folders)
